add picture fill plugin

--- a/_layout_head.html.slim
+++ b/_layout_head.html.slim
@@ -6,6 +6,7 @@ meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale
 = javascript_include_tag "/vendor/modernizr.custom.76886.js"
 = javascript_include_tag \
   "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
+  "/vendor/picturefill.js", \
   "/vendor/macho.js", \
   "/vendor/jquery.waypoints.min.js", \
   "/vendor/jquery.waypoints.sticky.min.js", \
