--- a/policy/geriatric-care.html.slim
+++ b/policy/geriatric-care.html.slim
@@ -4,12 +4,12 @@
   .policy-page
     .scroll-spy-menu
       ul.scroll-spy-menu-inner
-        li.scroll-spy-menu-item: a href="#section-1" 主張
-        li.scroll-spy-menu-item: a href="#section-2" 原因
-        li.scroll-spy-menu-item: a href="#section-3" 政策
+        li.scroll-spy-menu-item: a href="#section-1" 原因
+        li.scroll-spy-menu-item: a href="#section-2" 政策
     .policy-header style="background-image: url('/images/policy_image/geriatric_care/geriatric_care_header.jpg')"
       .header-title
         .header-title-inner
+          ul.policy-category: li: a href="#" 社會福利
           h1.main-title 長照十年計畫 2.0 版
           h2.main-sub-title 有一天我們都會變老，誰會照顧我們？
     .post
@@ -21,32 +21,33 @@
         a.post-share-btn.icon-line href="#"
       .post-meta
         span.post-date 2015.8.25
-        a.post-tag href="/tags/" 長期照護
+        a.post-tag href="/tags/" 長期照顧
     .section
       blockquote.animation.slide-up 「有過照顧經驗人都知道，如果沒有很大的耐心和愛心，即使是最親近的家人，也會感到辛苦。在照顧過程中，不管是照顧者還是被照顧者，常常會處於一種精神上很緊張的狀態⋯⋯有一段時間我沒有工作，在家裡照顧媽媽，特別感受到這個問題的嚴重性，這是台灣許多家庭正在經歷的事情。作為一個政治人物，我的責任就是提出問題的解決方案。」
 
-    .section.scroll-spy-section#section-1 data-spy-index="1"
-      .multi-col-content
-        h3.section-title 我們主張
-        .multi-col-content-inner
-          .col-3-content.animation.slide-up.delay-200ms
-            img.image src="/images/policy_image/geriatric_care/gc1_1.png"
+    .section.scroll-spy-section.gray-block
+      .center-content.animation
+        .text-content
+          h3.section-title 我們主張
+        ol.text-content.order-list
+          li.fade-in.delay-200ms
             h3.sub-section-title 政府的責任
             p 政府有責任建構完整的長期照顧體系，讓失能老人與身心功能障礙者能夠獲得適切的服務，<strong>讓有需要照顧的人，能夠獨立生活。</strong>
-          .col-3-content.animation.slide-up.delay-400ms
-            img.image src="/images/policy_image/geriatric_care/gc1_2.png"
+          li.animation.fade-in.delay-400ms
             h3.sub-section-title 在地老化
             p 實現<strong>在地老化，服務種類應多元與連續</strong>，從支持家庭、居家、社區到機構式，建構一套普及的照顧服務體系。同時，政府必須建立照顧管理機制，培訓足夠的本國照顧人力，確保服務資源的效率與品質。
-          .col-3-content.animation.slide-up.delay-600ms
-            img.image src="/images/policy_image/geriatric_care/gc1_3.png"
+          li.animation.fade-in.delay-600ms
             h3.sub-section-title 減輕負擔
             p 政府必須負起責任建立完整的長期照顧體系，努力去建造一個<strong>負得起、用得上、溫馨而人性的長照服務體系</strong>，照顧每一個有需要的人，減輕家庭照顧負擔。
 
+    .section-has-background.scroll-spy-section#section-1 data-spy-index="1" style="background-image: url('/images/policy_image/geriatric_care/geriatric_care_partial_bg_1.jpg')"
+      .center-content.animation.fade-in
+        .content-class 原因
+        h3.section-title 超高齡社會來臨，社會保險即將破產
 
-    .section.scroll-spy-section#section-2 data-spy-index="2"
+    .section
       .center-content
         .text-content
-          h3.section-title 超高齡社會來臨，社會保險即將破產
           h4.sub-section-title 人口老化加速──我們將從「高齡化社會」進入「超高齡社會」
           p 面臨人口老化加速，失能及失智者的照顧需求大量增加，家庭照顧負擔非常沈重。目前我國老年人口高達281萬人，依國家政策發展委員會估計， 2020年我國老人人口將達380萬4千人，2025年將會逼近500萬，屆時我國的老人人口將超過20%，到了2045年，每3個人就有1個老人，從「高齡化社會」進入「超高齡社會」。另依衛生福利部推估，若將身心障礙者照顧人數一併計入，2018年我國需求長期人數為58萬814人，2028年則高達81萬1971人。解決長照問題刻不容緩。
         .figure.animation.fade-in
@@ -58,7 +59,7 @@
         .figure.animation.fade-in
           img src="http://placehold.it/960x480?text=苦惱中"
 
-    .section
+    .section.white-block
       blockquote.animation.slide-up 老人本身不是問題，只有當政府無法提出相關的政策時，老人才會變成問題。我願意再一次說明我的立場。當「普遍照顧」成為社會政策的主流時，政府就必須改變過去殘補式的福利主張，要讓每一個人都享有基本的老幼照顧服務。
 
     .section
@@ -86,52 +87,53 @@
               h4.sub-section-title 城鄉差距嚴重、未能因地制宜
               p 財政資源短缺的縣市，長期照顧資源嚴重不足。而如原住民族部落因地理偏遠、專業長期照顧資源不足，無法以都市補助標準與專業條件來統一規範，在不影響專業品質下，長照資源因地制宜，採行殊異的專業條件要求與補助標準有其必要。
 
-    .section-has-background.scroll-spy-section#section-3 data-spy-index="3" style="background-image: url('/images/policy_image/geriatric_care/geriatric_care_partial_bg.jpg')"
-      .center-content
+    .section-has-background.scroll-spy-section#section-2 data-spy-index="2" style="background-image: url('/images/policy_image/geriatric_care/geriatric_care_partial_bg_2.jpg')"
+      .center-content.animation.fade-in
+        .content-class 政策
         h3.section-title 政府負起照顧責任，減輕家庭沈重負擔
         h4.sub-section-title 長照10年計劃2.0 版──照顧每一個需要的人，我們的3帖處方
 
-    .section
+    .section.white-block
       .multi-col-content
         h3.section-title 普及的社區化長照服務
-        .multi-col-content-inner
-          .col-3-content.animation.slide-up.delay-200ms
-            img.image src="/images/policy_image/geriatric_care/gc3_1.png"
-            p 建立完整的長期照顧體系，從支持家庭照顧者、到宅服務、居家護理、日間照顧、短期臨託、餐食服務、交通接送、團體家屋、機構式照顧等基礎建設完成。
-          .col-3-content.animation.slide-up.delay-400ms
-            img.image src="/images/policy_image/geriatric_care/gc3_2.png"
-            p 發展以社區為基礎的健康照護團隊，向前銜接預防保健，向後發展在宅臨終安寧照顧，以期壓縮疾病期間，減少長期照顧壓力。
-          .col-3-content.animation.slide-up.delay-600ms
-            img.image src="/images/policy_image/geriatric_care/gc3_3.png"
-            p 積極發展以社區為基礎的小規模多機能整合型服務中心，提供在地老化的社區整體老人、身心障礙者的綜合照顧服務。
+        .multi-col-content-inner.animation
+          .col-3-content
+            img.image.fade-in src="/images/policy_image/geriatric_care/gc3_1.png"
+            p.fade-in.delay-200ms 建立完整的長期照顧體系，從支持家庭照顧者、到宅服務、居家護理、日間照顧、短期臨託、餐食服務、交通接送、團體家屋、機構式照顧等基礎建設完成。
+          .col-3-content
+            img.image.fade-in.delay-400ms src="/images/policy_image/geriatric_care/gc3_2.png"
+            p.fade-in.delay-600ms 發展以社區為基礎的健康照護團隊，向前銜接預防保健，向後發展在宅臨終安寧照顧，以期壓縮疾病期間，減少長期照顧壓力。
+          .col-3-content
+            img.image.fade-in.delay-800ms src="/images/policy_image/geriatric_care/gc3_3.png"
+            p.fade-in.delay-1000ms 積極發展以社區為基礎的小規模多機能整合型服務中心，提供在地老化的社區整體老人、身心障礙者的綜合照顧服務。
 
     .section
       .multi-col-content
         h3.section-title 付得起的平價長照服務
-        .multi-col-content-inner
-          .col-3-content.animation.slide-up.delay-200ms
-            img.image src="/images/policy_image/geriatric_care/gc4_1.png"
-            p 未來將編列充足的長照服務基金，每年編列316億元，未來因應需求增加，逐年提高財源數額，加速建置長照服務體系。
-          .col-3-content.animation.slide-up.delay-400ms
-            img.image src="/images/policy_image/geriatric_care/gc4_2.png"
-            p 讓每一個需要的人都受到照顧，依家庭經濟狀況給予適當的長照經費補助，針對偏鄉地區展開長照資源補強專案，擴展長期照顧服務設施，拉進城鄉差距。
-          .col-3-content.animation.slide-up.delay-600ms
-            img.image src="/images/policy_image/geriatric_care/gc4_3.png"
-            p 錢從哪裡來？指定稅收300億元+政府公務預算30億元，以公平合理為原則，指定稅收為主要財源。
+        .multi-col-content-inner.animation
+          .col-3-content
+            img.image.fade-in src="/images/policy_image/geriatric_care/gc4_1.png"
+            p.fade-in.delay-200ms 未來將編列充足的長照服務基金，每年編列316億元，未來因應需求增加，逐年提高財源數額，加速建置長照服務體系。
+          .col-3-content
+            img.image.fade-in.delay-400ms src="/images/policy_image/geriatric_care/gc4_2.png"
+            p.fade-in.delay-600ms 讓每一個需要的人都受到照顧，依家庭經濟狀況給予適當的長照經費補助，針對偏鄉地區展開長照資源補強專案，擴展長期照顧服務設施，拉進城鄉差距。
+          .col-3-content
+            img.image.fade-in.delay-800ms src="/images/policy_image/geriatric_care/gc4_3.png"
+            p.fade-in.delay-1000ms 錢從哪裡來？指定稅收300億元+政府公務預算30億元，以公平合理為原則，指定稅收為主要財源。
 
-    .section
+    .section.gray-block
       .multi-col-content
         h3.section-title 專業的優質長照服務
-        .multi-col-content-inner
-          .col-3-content.animation.slide-up.delay-200ms
-            img.image src="/images/policy_image/geriatric_care/gc5_1.png"
-            p 優質的長照服務訓練，包括照顧服務員、社會工作、護理、物理治療、職能治療、營養等人員，提供完整照顧，亦能創造就業機會，帶動周邊相關產業。
-          .col-3-content.animation.slide-up.delay-400ms
-            img.image src="/images/policy_image/geriatric_care/gc5_2.png"
-            p 充足的長照服務人力，大專院校老人服務、長期照護等科系所學生納入長照人力規劃，有效培訓並轉介就業，並將外籍配偶納入長照服務培育計畫，增加潛在人力資源。
-          .col-3-content.animation.slide-up.delay-600ms
-            img.image src="/images/policy_image/geriatric_care/gc5_3.png"
-            p 建立專業照顧管理制度，將照顧管理專員納入專門職業及技術人員考試，確保照顧服務品質。
+        .multi-col-content-inner.animation
+          .col-3-content
+            img.image.fade-in src="/images/policy_image/geriatric_care/gc5_1.png"
+            p.fade-in.delay-200ms 優質的長照服務訓練，包括照顧服務員、社會工作、護理、物理治療、職能治療、營養等人員，提供完整照顧，亦能創造就業機會，帶動周邊相關產業。
+          .col-3-content
+            img.image.fade-in.delay-400ms src="/images/policy_image/geriatric_care/gc5_2.png"
+            p.fade-in.delay-600ms 充足的長照服務人力，大專院校老人服務、長期照護等科系所學生納入長照人力規劃，有效培訓並轉介就業，並將外籍配偶納入長照服務培育計畫，增加潛在人力資源。
+          .col-3-content
+            img.image.fade-in.delay-800ms src="/images/policy_image/geriatric_care/gc5_3.png"
+            p.fade-in.delay-1000ms 建立專業照顧管理制度，將照顧管理專員納入專門職業及技術人員考試，確保照顧服務品質。
 
     .section
       .center-content
@@ -139,20 +141,18 @@
           h3.section-title 全面推動「長照、托育、婦女就業三合一照顧政策」從根源面對高齡化問題
           p 「老有所終，幼有所托」是政府應該給人民最基本的安心生活。在民進黨上次執政時期，我們就已經看見高齡化將是國家重大的挑戰，我們訂出一套「長照十年」計劃，預計從2007年起，分十年編列817億的預算，為台灣的長照體系創造出服務供給。但是過去八年以來，長照計劃的預算規模只有原先規劃的三分之一，所訓練的居家服務員只有百分之十願意繼續留在職場，計畫延宕。
           p 「長照十年2.0版」提出務實方案解決長照困境，刻不容緩。未來我們將在中央設置跨部門的「長期照顧推動小組」，整合各部門、各層級政府間的照顧事務，盡快達到便民、效率的目標。從根源面對高齡化問題，我們將進一步推動全面的「長照、托育、婦女就業三合一照顧政策」，來減輕家庭，尤其是家庭之中的女性，所承受的照顧重擔。
-        .figure.animation.fade-in
-          img src="/images/policy_image/geriatric_care/gc6_1.png"
-
-      .multi-col-content
-        .multi-col-content-inner
-          .col-3-content.animation.slide-up.delay-200ms
+        ol.text-content.todo-list.animation
+          li.fade-in.delay-200ms
             h3.section-title 長照
             p 以「長照十年計畫2.0版」，推出<strong>付得起、用得上、溫馨而人性</strong>的長照服務。
-          .col-3-content.animation.slide-up.delay-400ms
+          li.fade-in.delay-400ms
             h3.section-title 托育
             p 推動讓<strong>家長付得起</strong>的<strong>普及公共托育服務</strong>，支持父母兼顧育兒和工作。
-          .col-3-content.animation.slide-up.delay-600ms
+          li.fade-in.delay-600ms
             h3.section-title 婦女就業
             p 以<strong>「女性充分就業」</strong>啟動良性循環。
+        .figure.animation.fade-in
+          img src="/images/policy_image/geriatric_care/gc6_1.png"
 
     .post
       .post-share
