--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -843,11 +843,11 @@ body { background-color: #183840; position: relative; }
   .delay-2000ms { -webkit-transition-delay: 2s; -moz-transition-delay: 2s; -o-transition-delay: 2s; transition-delay: 2s; } }
 .scroll-spy-menu { float: right; display: none; }
 .scroll-spy-menu .scroll-spy-menu-inner { position: fixed; top: 50%; z-index: 100; margin: 0; padding-right: 6px; list-style: none; -webkit-transform: translate(-100%, -50%); -moz-transform: translate(-100%, -50%); -ms-transform: translate(-100%, -50%); -o-transform: translate(-100%, -50%); transform: translate(-100%, -50%); }
-.scroll-spy-menu .scroll-spy-menu-item { position: relative; padding-right: 20px; text-align: right; }
-.scroll-spy-menu .scroll-spy-menu-item a { font-size: 13px; color: transparent; white-space: nowrap; -webkit-transition: color 0.25s; -moz-transition: color 0.25s; -o-transition: color 0.25s; transition: color 0.25s; }
-.scroll-spy-menu .scroll-spy-menu-item:after { content: ""; position: absolute; top: 50%; right: 6px; margin-top: -3px; border: 3px solid #aaaaaa; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; -webkit-transition: border-color 0.25s, -webkit-transform 0.25s; -moz-transition: border-color 0.25s, -moz-transform 0.25s; -o-transition: border-color 0.25s, -o-transform 0.25s; transition: border-color 0.25s, transform 0.25s; }
+.scroll-spy-menu .scroll-spy-menu-item { text-align: right; }
+.scroll-spy-menu .scroll-spy-menu-item a { display: block; position: relative; padding-right: 20px; font-size: 13px; line-height: 24px; color: transparent; white-space: nowrap; -webkit-transition: color 0.25s; -moz-transition: color 0.25s; -o-transition: color 0.25s; transition: color 0.25s; }
+.scroll-spy-menu .scroll-spy-menu-item a:after { content: ""; position: absolute; top: 50%; right: 6px; margin-top: -3px; border: 3px solid #aaaaaa; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; -webkit-transition: border-color 0.25s, -webkit-transform 0.25s; -moz-transition: border-color 0.25s, -moz-transform 0.25s; -o-transition: border-color 0.25s, -o-transform 0.25s; transition: border-color 0.25s, transform 0.25s; }
 .scroll-spy-menu .scroll-spy-menu-item:hover a { color: #50B584; text-decoration: none; }
-.scroll-spy-menu .scroll-spy-menu-item:hover:after, .scroll-spy-menu .scroll-spy-menu-item.is-active:after { border-color: #50B584; -webkit-transform: scale(1.5, 1.5); -moz-transform: scale(1.5, 1.5); -ms-transform: scale(1.5, 1.5); -o-transform: scale(1.5, 1.5); transform: scale(1.5, 1.5); }
+.scroll-spy-menu .scroll-spy-menu-item:hover a:after, .scroll-spy-menu .scroll-spy-menu-item.is-active a:after { border-color: #50B584; -webkit-transform: scale(1.5, 1.5); -moz-transform: scale(1.5, 1.5); -ms-transform: scale(1.5, 1.5); -o-transform: scale(1.5, 1.5); transform: scale(1.5, 1.5); }
 @media (min-width: 1025px) { .scroll-spy-menu { display: block; } }
 
 .back-to-top-wrap { visibility: hidden; display: block; position: fixed; bottom: -48px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s, bottom 0.5s; -webkit-transition-delay: 0.5s, 0s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; }
@@ -880,14 +880,20 @@ mark { background-color: #fbd26b; }
 
 .policy-page p { margin-bottom: 12px; font-size: 13px; line-height: 24px; text-align: left; }
 .policy-page ul, .policy-page ol { padding-left: 0; }
-.policy-page .post { margin-top: 24px; margin-bottom: 24px; }
+.policy-page .post { margin-top: 24px; }
 .policy-page .image { display: block; margin: 0 auto 24px; max-width: 100%; height: auto; }
-.policy-page .section { margin-top: 48px; margin-bottom: 48px; padding: 0 24px; }
-@media (min-width: 640px) { .policy-page .section { margin-top: 96px; margin-bottom: 96px; } }
-@media (min-width: 1025px) { .policy-page .section { margin-top: 144px; margin-bottom: 144px; } }
+.policy-page .section { padding-top: 48px; padding-bottom: 48px; padding-left: 24px; padding-right: 24px; }
+@media (min-width: 640px) { .policy-page .section { padding-top: 72px; padding-bottom: 72px; } }
+@media (min-width: 1025px) { .policy-page .section { padding-top: 96px; padding-bottom: 96px; } }
+.policy-page .section.white-block { background-color: white; }
+.policy-page .section.gray-block { background-color: #efefef; }
 .policy-page .policy-header { position: relative; padding-bottom: 1px; text-align: center; color: white; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 .policy-page .policy-header:before { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.5); }
 .policy-page .policy-header:after { content: ""; position: absolute; left: 50%; bottom: 24px; width: 54px; height: 28px; margin-left: -27px; background-image: url(/images/policy-header-arrow.png); background-image: none, url(/images/policy-header-arrow.svg); background-position: center; background-repeat: no-repeat; }
+.policy-page .policy-header .policy-category { margin: 0; padding: 0; border: 0; list-style: none; }
+.policy-page .policy-header .policy-category li { display: inline-block; margin: 0 3px; }
+.policy-page .policy-header .policy-category a { display: block; margin-bottom: 12px; font-size: 15px; line-height: 18px; font-weight: bold; color: #feff86; }
+.policy-page .policy-header .policy-category a:hover { text-decoration: none; }
 .policy-page .policy-header .header-title { position: relative; padding: 144px 24px; }
 .policy-page .policy-header .header-title .main-title, .policy-page .policy-header .header-title .main-sub-title { font-weight: bold; }
 .policy-page .main-title { margin-bottom: 6px; font-size: 28px; line-height: 36px; }
@@ -910,6 +916,8 @@ mark { background-color: #fbd26b; }
 .policy-page .col-2-content { padding: 0px; text-align: left; }
 .policy-page .col-3-content { padding: 0px; text-align: left; }
 .policy-page .section-has-background { position: relative; padding-top: 72px; padding-bottom: 72px; padding-left: 24px; padding-right: 24px; color: white; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.policy-page .section-has-background .content-class { position: relative; margin-bottom: 24px; font-size: 18px; line-height: 24px; font-weight: bold; }
+.policy-page .section-has-background .content-class:after { content: ""; display: block; width: 24px; margin: 6px auto 0; border-bottom: 1px solid white; }
 .policy-page .section-has-background .section-title { margin-bottom: 6px; font-size: 21px; line-height: 30px; }
 .policy-page .section-has-background .sub-section-title { font-size: 13px; line-height: 24px; }
 .policy-page .section-has-background .center-content { text-align: center; }
@@ -922,30 +930,33 @@ mark { background-color: #fbd26b; }
 .policy-page .figure-grid .figure-item { float: left; width: 100%; padding-top: 100%; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-color: #dddddd; }
 .policy-page .figure-grid .figure-item.small { width: 50%; padding-top: 50%; }
 .policy-page .figure-grid .figure-item.empty { display: none; background-color: transparent; }
-.policy-page .order-list { position: relative; padding-top: 24px; padding-left: 36px; list-style: none; text-align: left; }
-.policy-page .order-list .section-title, .policy-page .order-list .sub-section-title { line-height: 48px; margin-bottom: 0px; }
-.policy-page .order-list:before { position: absolute; top: 24px; left: -9px; width: 36px; text-align: right; font-size: 28px; font-weight: bold; line-height: 48px; letter-spacing: -2px; color: rgba(0, 0, 0, 0.2); }
-.policy-page .order-list:nth-child(1):before { content: "01"; }
-.policy-page .order-list:nth-child(2):before { content: "02"; }
-.policy-page .order-list:nth-child(3):before { content: "03"; }
-.policy-page .order-list:nth-child(4):before { content: "04"; }
-.policy-page .order-list:nth-child(5):before { content: "05"; }
-.policy-page .order-list:nth-child(6):before { content: "06"; }
-.policy-page .order-list:nth-child(7):before { content: "07"; }
-.policy-page .order-list:nth-child(8):before { content: "08"; }
-.policy-page .order-list:nth-child(9):before { content: "09"; }
-.policy-page .order-list:nth-child(11):before { content: "11"; }
-.policy-page .order-list:nth-child(12):before { content: "12"; }
-.policy-page .order-list:nth-child(13):before { content: "13"; }
-.policy-page .order-list:nth-child(14):before { content: "14"; }
-.policy-page .order-list:nth-child(15):before { content: "15"; }
-.policy-page .order-list:nth-child(16):before { content: "16"; }
-.policy-page .order-list:nth-child(17):before { content: "17"; }
-.policy-page .order-list:nth-child(18):before { content: "18"; }
-.policy-page .order-list:nth-child(19):before { content: "19"; }
-.policy-page .order-list:nth-child(20):before { content: "20"; }
+.policy-page .order-list, .policy-page .todo-list { list-style: none; }
+.policy-page .order-list li, .policy-page .todo-list li { position: relative; padding-left: 36px; text-align: left; }
+.policy-page .order-list li .section-title, .policy-page .order-list li .sub-section-title, .policy-page .todo-list li .section-title, .policy-page .todo-list li .sub-section-title { line-height: 48px; margin-bottom: 0px; }
+.policy-page .order-list li:before, .policy-page .todo-list li:before { position: absolute; left: -9px; width: 36px; text-align: right; font-size: 28px; font-weight: bold; line-height: 48px; letter-spacing: -2px; color: rgba(0, 0, 0, 0.2); }
+.policy-page .order-list li:nth-child(1):before { content: "01"; }
+.policy-page .order-list li:nth-child(2):before { content: "02"; }
+.policy-page .order-list li:nth-child(3):before { content: "03"; }
+.policy-page .order-list li:nth-child(4):before { content: "04"; }
+.policy-page .order-list li:nth-child(5):before { content: "05"; }
+.policy-page .order-list li:nth-child(6):before { content: "06"; }
+.policy-page .order-list li:nth-child(7):before { content: "07"; }
+.policy-page .order-list li:nth-child(8):before { content: "08"; }
+.policy-page .order-list li:nth-child(9):before { content: "09"; }
+.policy-page .order-list li:nth-child(11):before { content: "11"; }
+.policy-page .order-list li:nth-child(12):before { content: "12"; }
+.policy-page .order-list li:nth-child(13):before { content: "13"; }
+.policy-page .order-list li:nth-child(14):before { content: "14"; }
+.policy-page .order-list li:nth-child(15):before { content: "15"; }
+.policy-page .order-list li:nth-child(16):before { content: "16"; }
+.policy-page .order-list li:nth-child(17):before { content: "17"; }
+.policy-page .order-list li:nth-child(18):before { content: "18"; }
+.policy-page .order-list li:nth-child(19):before { content: "19"; }
+.policy-page .order-list li:nth-child(20):before { content: "20"; }
+.policy-page .todo-list li:before { content: ""; width: 48px; height: 48px; background-image: url(/images/todo-item-style.png); background-image: none, url(/images/todo-item-style.png); background-position: center; background-repeat: no-repeat; }
 @media (min-width: 640px) { .policy-page p { font-size: 15px; line-height: 24px; }
-  .policy-page .post { margin-top: 48px; margin-bottom: 48px; }
+  .policy-page .post { margin-top: 48px; }
+  .policy-page .policy-header .policy-category a { font-size: 18px; line-height: 24px; }
   .policy-page .policy-header .header-title { padding: 240px 36px; }
   .policy-page .main-title { font-size: 36px; line-height: 48px; }
   .policy-page .main-sub-title { font-size: 18px; line-height: 24px; }
@@ -967,10 +978,10 @@ mark { background-color: #fbd26b; }
   .policy-page .group-content .text-content.right + .figure { left: 0; }
   .policy-page .multi-col-content { max-width: 960px; margin-left: auto; margin-right: auto; text-align: center; }
   .policy-page .multi-col-content-inner:after { content: ""; display: table; clear: both; }
-  .policy-page .col-2-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 50%; padding: 0 24px 24px; text-align: left; }
+  .policy-page .col-2-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 50%; padding: 0 24px; text-align: left; }
   .policy-page .col-2-content:nth-child(2n+1) { clear: left; }
   .policy-page .col-2-content.order-list { padding: 24px 12px 0 36px; }
-  .policy-page .col-3-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 33.333%; padding: 0 24px 24px; text-align: center; }
+  .policy-page .col-3-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 33.333%; padding: 0 24px; text-align: center; }
   .policy-page .col-3-content:nth-child(3n+1) { clear: left; }
   .policy-page .section-title + .multi-col-content-inner { margin-top: 24px; }
   .policy-page .order-list:before { font-size: 32px; }
