--- a/partial/_post-list.html.slim
+++ b/partial/_post-list.html.slim
@@ -1,6 +1,11 @@
 .post-list.post-list_block-style
   .container
     .post-list-content
+
+      / 在 post-lsit 專用的 banner
+      .post-item
+        = render :partial => "/partial/banner"
+
       - 6.times do |i|
         .post-item
           a.post-image style="background-image: url('/images/post-2.jpg')" href="/posts/single-post-page.html"
