--- a/posts/card.html.slim
+++ b/posts/card.html.slim
@@ -73,4 +73,14 @@
       h3.comments-title 留言
       .fb-comments data-href="http://iing.tw/" data-width="100%" data-numposts="5"
 
+  .banner-block
+    .container.container_single-article
+      / banner 元件
+      a.banner href="#"
+        picture
+          / 手機版以上使用的照片
+          source srcset="http://placehold.it/1000x240" media="(min-width: 480px)"
+          / 手機版時使用的照片
+          img srcset="http://placehold.it/480x300" alt=""
+
 = render "/posts/fb-setting.erb"
