--- a/posts/index.html.slim
+++ b/posts/index.html.slim
@@ -6,6 +6,11 @@
     .container
       h2.post-list-title= "全部文章"
       .post-list-content
+
+        / 在 post-lsit 專用的 banner
+        .post-item
+          = render :partial => "/partial/banner"
+
         - 6.times do |i|
           .post-item
             a.post-image style="background-image: url('/images/post-2.jpg')" href="/posts/single-post-page.html"
