--- a/sass/all.scss
+++ b/sass/all.scss
@@ -18,6 +18,7 @@
 @import "component/page-header";
 @import "component/block";
 @import "component/back-to-top";
+@import "component/banner";
 
 // ==== partial ====
 // @import "partial/guideline-header"; // guideline 專用
@@ -37,6 +38,7 @@
 @import "partial/aside-posts";
 @import "partial/message-block";
 @import "partial/volunteer";
+@import "partial/banner-block";
 
 // ==== page ====
 @import "page/homepage";
