--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -64,12 +64,6 @@
 
   .banner-block
     .container.container_single-article
-      / banner 元件
-      a.banner href="#"
-        picture
-          / 手機版以上使用的照片
-          source srcset="http://placehold.it/1000x240" media="(min-width: 480px)"
-          / 手機版時使用的照片
-          img srcset="http://placehold.it/480x300" alt=""
+      = render :partial => "/partial/banner"
 
 = render "/posts/fb-setting.erb"
