--- a/_layout_foot.html.slim
+++ b/_layout_foot.html.slim
@@ -3,3 +3,7 @@
 /   "/vendor/jquery.waypoints.min.js", \
 /   "/vendor/jquery.waypoints.sticky.min.js", \
 /   "all"
+
+
+<script src="//use.typekit.net/qya7xgm.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
