--- a/sass/page/_policy-page.sass
+++ b/sass/page/_policy-page.sass
@@ -1,207 +1,18 @@
-// container setting
-$content-width: 680px
-$figure-width: 960px
-@mixin policy-container($max-width)
-  max-width: $max-width
-  margin-left: auto
-  margin-right: auto
-
-// text mark tool
-em, strong
-  font-weight: bold
-
-i
-  font-style: italic
-
-mark
-  background-color: lighten(#FAC339, 10%)
-
-.text-center
-  text-align: center
-
 // policy-layout
 .policy-page
+  @import policy-page/typekit
+  @import policy-page/base
+  @import policy-page/base-title
+  @import policy-page/post-tool
+  @import policy-page/policy-header
+  @import policy-page/section-class
+  @import policy-page/blockquote
+  @import policy-page/center-content
+  @import policy-page/group-content
+  @import policy-page/multi-col-content
+  @import policy-page/figure-grid
+  @import policy-page/list
 
-  p
-    +trailer(.5)
-    +adjust-font-size-to(13px)
-    text-align: left
-
-  ul, ol
-    padding-left: 0
-
-  .post
-    +leader()
-
-  .image
-    display: block
-    margin: 0 auto 24px
-    max-width: 100%
-    height: auto
-
-  .section
-    +padding-leader(2)
-    +padding-trailer(2)
-    padding-left: 24px
-    padding-right: 24px
-
-    +at-breakpoint($pad)
-      +padding-leader(3)
-      +padding-trailer(3)
-
-    +at-breakpoint($desktop)
-      +padding-leader(4)
-      +padding-trailer(4)
-
-    &.white-block
-      background-color: white
-
-    &.gray-block
-      background-color: #EFEFEF
-
-  .policy-header
-    position: relative
-    padding-bottom: 1px
-    text-align: center
-    color: white
-    background-repeat: no-repeat
-    background-position: center center
-    +background-size(cover)
-
-    &:before
-      content: ''
-      position: absolute
-      top: 0
-      left: 0
-      right: 0
-      bottom: 0
-      background-color: rgba(0,0,0,.5)
-
-    &:after
-      content: ''
-      position: absolute
-      left: 50%
-      bottom: 24px
-      width: 54px
-      height: 28px
-      margin-left: -27px
-      background-image: url(/images/policy-header-arrow.png)
-      background-image: none, url(/images/policy-header-arrow.svg)
-      background-position: center
-      background-repeat: no-repeat
-
-    .policy-category
-      +reset-list-style
-
-      li
-        display: inline-block
-        margin: 0 3px
-
-      a
-        display: block
-        +trailer(.5)
-        +adjust-font-size-to(15px, 3/4)
-        font-weight: bold
-        color: #FEFF86
-
-        &:hover
-          text-decoration: none
-
-    .header-title
-      position: relative
-      padding: rhythm(6) 24px
-
-      .main-title, .main-sub-title
-        font-weight: bold
-
-  .main-title
-    +trailer(.25)
-    +adjust-font-size-to(28px, 1.5)
-
-  .main-sub-title
-    +trailer(0)
-    +adjust-font-size-to(16px)
-
-  .section-title
-    +trailer(.5)
-    +adjust-font-size-to(24px, 1.35)
-    font-weight: bold
-
-  .sub-section-title
-    +trailer(.25)
-    +adjust-font-size-to(18px, 1.25)
-    font-weight: bold
-
-  blockquote
-    +policy-container($content-width)
-    position: relative
-    padding: 0 30px
-    +adjust-font-size-to(16px)
-    text-align: center
-    color: $color-secondary
-    border: none
-
-    &:before, &:after
-      position: absolute
-      display: block
-      color: #ccc
-      @include opacity(0.125)
-
-    &:before
-      content: '“'
-      top: 0
-      left: 0
-      +replace-text-with-svg('quote')
-      width: 18px
-      height: 24px
-
-    &:after
-      content: '”'
-      bottom: 0
-      right: 0
-      +replace-text-with-svg('quote2')
-      width: 18px
-      height: 24px
-
-  .center-content
-    text-align: left
-
-    .text-content
-      +policy-container($content-width)
-
-    .figure
-      +policy-container($figure-width)
-      +leader()
-      +trailer()
-
-  .group-content
-    +pie-clearfix
-    position: relative
-    background-color: #F0F0F0
-
-    .text-content
-      padding-top: 48px 12px 0px
-
-    .figure
-      padding-top: 66.666%
-      background-repeat: no-repeat
-      background-position: center center
-      +background-size(cover)
-
-  .multi-col-content
-    +policy-container($figure-width)
-    text-align: left
-
-  .multi-col-content-inner
-    +pie-clearfix
-
-  .col-2-content
-    padding: 0px
-    text-align: left
-
-  .col-3-content
-    padding: 0px
-    text-align: left
 
   .section-has-background
     position: relative
@@ -229,10 +40,10 @@ mark
 
     .section-title
       +trailer(.25)
-      +adjust-font-size-to(21px, 1.25)
+      +adjust-font-size-to(26px, 1.25)
 
     .sub-section-title
-      +adjust-font-size-to(13px)
+      +adjust-font-size-to(15px)
 
     .center-content
       text-align: center
@@ -249,253 +60,34 @@ mark
     *
       position: relative
 
-  .figure-grid
-    +pie-clearfix
-
-    .figure-item-wrap
-      +pie-clearfix
-      float: left
-      width: 100 / 2 * 1%
-
-    &.edit
-      .figure-item
-        outline: 1px solid red
-
-    .figure-item
-      float: left
-      width: 100%
-      padding-top: 100%
-      background-repeat: no-repeat
-      background-position: center center
-      +background-size(cover)
-      background-color: $color-gray-light
-
-      &.small
-        width: 50%
-        padding-top: 50%
-
-      &.empty
-        display: none
-        background-color: transparent
-
-  .order-list, .todo-list
-    list-style: none
-    li
-      position: relative
-      padding-left: 36px
-      text-align: left
-
-      .section-title, .sub-section-title
-        line-height: 48px
-        +trailer(0)
-
-      &:before
-        position: absolute
-        left: -9px
-        width: 36px
-        text-align: right
-        font-size: 28px
-        font-weight: bold
-        line-height: 48px
-        letter-spacing: -2px
-        color: rgba(0,0,0,.2)
-
-  @for $i from 1 through 9
-    .order-list li:nth-child(#{$i})
-      &:before
-        content: '0#{$i}'
-
-  @for $i from 11 through 20
-    .order-list li:nth-child(#{$i})
-      &:before
-        content: '#{$i}'
-
-  .todo-list li:before
-    content: ''
-    width: 48px
-    height: 48px
-    background-image: url(/images/todo-item-style.png)
-    background-image: none, url(/images/todo-item-style.png)
-    background-position: center
-    background-repeat: no-repeat
-
   +at-breakpoint($pad)
-    p
-      +adjust-font-size-to(15px)
-
-    .post
-      +leader(2)
-
-    .policy-header
-
-      .policy-category a
-        +adjust-font-size-to(18px)
-
-      .header-title
-        padding: rhythm(10) 36px
-
-    .main-title
-      +adjust-font-size-to(36px)
-
-    .main-sub-title
-      +adjust-font-size-to(18px)
-
-    .section-title
-      +trailer()
-      +adjust-font-size-to(26px, 1.5)
-
-    .sub-section-title
-      +trailer(.5)
-      +adjust-font-size-to(21px, 1.25)
-
-    blockquote
-      padding: 0 48px
-      +adjust-font-size-to(18px, 1.25)
-
-      &:before
-        content: '“'
-        width: 24px
-        height: 30px
-
-      &:after
-        content: '”'
-        bottom: 0
-        right: 0
-        width: 24px
-        height: 30px
 
     .section-has-background
       +padding-leader(5)
       +padding-trailer(5)
 
       .section-title
-        +adjust-font-size-to(28px, 1.5)
+        +adjust-font-size-to(34px, 1.5)
 
       .sub-section-title
         +adjust-font-size-to(16px)
 
 
-    .center-content
-      text-align: center
 
-      .figure
-        +leader(2)
-        +trailer(2)
 
-    .group-content
 
-      .text-content
-        +box-sizing(border-box)
-        width: 50%
-        min-height: 460px
-        padding: 36px
 
-        &.left
-          float: left
 
-        &.right
-          float: right
 
-      .figure
-        position: absolute
-        width: 50%
-        top: 0
-        bottom: 0
-        padding-top: 0
 
-      .text-content.left + .figure
-        right: 0
 
-      .text-content.right + .figure
-        left: 0
 
-    .multi-col-content
-      +policy-container($figure-width)
-      text-align: center
 
-    .multi-col-content-inner
-      +pie-clearfix
 
-    .col-2-content
-      +box-sizing(border-box)
-      float: left
-      width: 50%
-      padding: 0 24px
-      text-align: left
-
-      &:nth-child(2n+1)
-        clear: left
-
-      &.order-list
-        padding: 24px 12px 0 36px
-
-    .col-3-content
-      +box-sizing(border-box)
-      float: left
-      width: 33.333%
-      padding: 0 24px
-      text-align: center
-
-      &:nth-child(3n+1)
-        clear: left
-
-    .section-title + .multi-col-content-inner
-      +leader()
-
-    .order-list:before
-      font-size: 32px
-
-    .figure-grid
-      .figure-item-row
-        +pie-clearfix
-
-      .figure-item-wrap
-        width: 100 / 4 * 1%
-
-      .figure-item.empty
-        display: block
 
   +at-breakpoint($desktop)
-    p
-      +trailer()
-
-    .main-title
-      +trailer(.5)
-      +adjust-font-size-to(42px)
-
-    .main-sub-title
-      +adjust-font-size-to(18px)
-
-    .section-title
-      +trailer()
-      +adjust-font-size-to(28px, 1.75)
-
-    .sub-section-title
-      +adjust-font-size-to(21px, 1.25)
-
-    .policy-header
-      background-attachment: fixed
-
-      .header-title
-        height: 80vh
-        max-height: 920px
-        padding: 0 24px
-
-        .header-title-inner
-          position: absolute
-          top: 50%
-          left: 0
-          right: 0
-          +translateY(-50%)
 
     .section-has-background
       +padding-leader(7)
       +padding-trailer(7)
 
-    .group-content
-
-      .text-content
-        padding: 72px
-
-    .order-list:before
-      font-size: 36px
