讓手機版的 banner 維持到 640px

--- a/sass/component/_banner.scss
+++ b/sass/component/_banner.scss
@@ -11,12 +11,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     display: block;
     margin: 0 auto;
   }
 
-  @include at-breakpoint(480px) {
+  @include at-breakpoint($pad) {
     padding-top: 24%;
   }
 }
