新增附件下載區塊

--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -28,6 +28,7 @@
     .post-content.article
       .container.container_single-article
         = render "/partial/demo-article"
+        = render "/posts/post-attachment"
     .post-footer
       .post-share
         span.post-share-title 分享：
