--- a/partial/_post-item.html.slim
+++ b/partial/_post-item.html.slim
@@ -2,7 +2,8 @@
 
   - 2.times do |j|
     .post-item
-      a.post-image style="background-image: url('/images/post-2.jpg')" href="/posts/single-post-page.html"
+      a.post-image href="/posts/single-post-page.html"
+        .post-image-inner.lazyload data-bg="/images/post-2.jpg"
       .post-content-wrap
         .post-meta
           .date 2015.7.22
@@ -17,7 +18,8 @@
           span.post-readmore 閱讀更多
 
   .post-item.post-item_event
-    a.post-image style="background-image: url('/images/post-2.jpg')" href="/posts/single-post-page.html"
+    a.post-image href="/posts/single-post-page.html"
+      .post-image-inner.lazyload data-bg="/images/post-2.jpg"
     .post-content-wrap
       .post-meta
         .date 2015.7.22
@@ -34,7 +36,8 @@
 
   - 2.times do |i|
     .post-item
-      a.post-image style="background-image: url('/images/post-2.jpg')" href="/posts/single-post-page.html"
+      a.post-image href="/posts/single-post-page.html"
+        .post-image-inner.lazyload data-bg="/images/post-2.jpg"
       .post-content-wrap
         .post-meta
           .date 2015.7.22
