--- a/search-result/index.html.slim
+++ b/search-result/index.html.slim
@@ -6,13 +6,14 @@
     .container
       h2.post-list-title= "搜尋結果：#{zh_lorem_words(rand(5)+2)}"
       .post-list-content
-        - 6.times do |i|
+        - 10.times do |i|
           .post-item
-            a.post-image href="/posts/single-post-page.html" style="background-image: url('http://placehold.it/300x200')"
+            a.post-image href="/posts/single-post-page.html"
+              .post-image-inner.lazyload data-bg="http://placehold.it/300x200"
             .post-meta
               .date 2015.7.22
               ul.post-category
-                li.post-category-item: a href="/categories/show.html" 政策
+                li.post-category-item: span 政策
                 // 若出現兩者以上議題的架構
                 / li.post-category-item: a href="/categories/show.html" 活動
                 / li.post-category-item: a href="/categories/show.html" 故事
